force-app/main/default/objects/Opportunity/fields/Opportunity_SubType__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_SubType__c</fullName>
    <description>It determines if the Opportunity is created as New, Re-contract (Renewal) or DoV (Deed of Variation)</description>
    <inlineHelpText>Modify this field if this Opportunity is a Renewal or Deed of Variation</inlineHelpText>
    <label>Opportunity SubType</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
                <default>true</default>
                <label>New</label>
            </value>
            <value>
                <fullName>Re-Contract</fullName>
                <label>Renewal</label>
            </value>
            <value>
                <fullName>DoV Increase</fullName>
            </value>
            <value>
                <fullName>DoV Decrease</fullName>
            </value>
            <value>
                <fullName>Deed of Variation</fullName>
                <isActive>false</isActive>
                <label>Deed of Variation</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>