force-app/main/default/objects/Opportunity/fields/Opportunity_Traded_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Traded_Revenue__c</fullName>
    <description>The field rolls up the Total Traded Revenue to Date from the Opportunity Product Classification revenues.</description>
    <inlineHelpText>The sum of the actual revenue to date across all products attached to the opportunity, from the revenue start date up to the traded for the current month. Revenue is updated weekly.</inlineHelpText>
    <label>Opportunity Traded Revenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>