force-app/main/default/objects/Opportunity/fields/Opportunity_Traded_Revenue_pc__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Traded_Revenue_pc__c</fullName>
    <description>The field indicates the ratio between the Total Traded Revenue to Date and Total Schedule Revenue to Date.</description>
    <formula>IF(Total_Schedule_Revenue_to_Date__c = 0,
0,
(Opportunity_Traded_Revenue__c / Total_Schedule_Revenue_to_Date__c)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The ratio between “Opportunity Traded Revenue” and “Opportunity Scheduled Revenue”. This metric is updated weekly.</inlineHelpText>
    <label>Opportunity Traded Revenue %</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>