force-app/main/default/objects/Opportunity/fields/Opportunity_Validation_Driver__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Validation_Driver__c</fullName>
    <description>Phase 1 - Opportunity Assessment (PWC)

Identify which internal stakeholder (Product, Solutions Sales, or Bids and Tenders) will progress this opportunity once it has reached stage 4</description>
    <inlineHelpText>Who will drive this opportunity once it has been Validated?</inlineHelpText>
    <label>Opportunity Validation Driver</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Product</fullName>
            </value>
            <value>
                <fullName>Solutions Sales</fullName>
            </value>
            <value>
                <fullName>Bids and Tenders</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>