force-app/main/default/objects/Opportunity/fields/Pre_Entry__c.field-meta.xml
<CustomField>
    <fullName>Pre_Entry__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This is a pre-entry scenario – rates have been loaded before customer signed off contract.</description>
    <inlineHelpText>This is a pre-entry scenario – rates have been loaded before customer signed off contract.</inlineHelpText>
    <label>Pre-entry of rates authorised</label>
    <type>Checkbox</type>
</CustomField>