force-app/main/default/objects/Opportunity/fields/Primary_Pick_Up_Location__c.field-meta.xml
<CustomField>
    <fullName>Primary_Pick_Up_Location__c</fullName>
    <label>Primary Pick-Up Location</label>
    <length>20</length>
    <type>Text</type>
</CustomField>