force-app/main/default/objects/Opportunity/fields/Product_Complexity_Rating__c.field-meta.xml
<CustomField>
    <fullName>Product_Complexity_Rating__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Product Complexity Rating</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>