force-app/main/default/objects/Opportunity/fields/Product_Count__c.field-meta.xml
<CustomField>
    <fullName>Product_Count__c</fullName>
    <description>Count of products.  This will then determine, via workflow, if the type is a product or solution.</description>
    <inlineHelpText>This field counts the number of products that have been attached to the opportunity (Data Quality Score – 15)</inlineHelpText>
    <label>Product Count</label>
    <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>