force-app/main/default/objects/Opportunity/fields/Push_Counter__c.field-meta.xml
<CustomField>
    <fullName>Push_Counter__c</fullName>
    <description>This field tracks many times an Opportunity has been pushed from month to month</description>
    <inlineHelpText>This field tracks many times an Opportunity has been pushed from month to month</inlineHelpText>
    <label>Push Counter</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>