force-app/main/default/objects/Opportunity/fields/RevenueCalculationAccountIDs__c.field-meta.xml
<CustomField>
    <fullName>RevenueCalculationAccountIDs__c</fullName>
    <label>Revenue Calculation Account IDs</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>