force-app/main/default/objects/Opportunity/fields/RevenueRefreshDate__c.field-meta.xml
<CustomField>
    <fullName>RevenueRefreshDate__c</fullName>
    <label>Revenue refresh date</label>
    <type>DateTime</type>
</CustomField>