force-app/main/default/objects/Opportunity/fields/RevenueRefreshedBy__c.field-meta.xml
<CustomField>
    <fullName>RevenueRefreshedBy__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Revenue refreshed by</label>
    <referenceTo>User</referenceTo>
    <relationshipName>refreshedRevenues</relationshipName>
    <type>Lookup</type>
</CustomField>