force-app/main/default/objects/Opportunity/fields/TCV_Complexity_Rating__c.field-meta.xml
<CustomField>
    <fullName>TCV_Complexity_Rating__c</fullName>
    <formula>IF(Amount &gt;= 0 &amp;&amp; Amount &lt;= 1000000, 0, IF(Amount &gt; 1000000 &amp;&amp; Amount &lt;= 5000000, 3, IF(Amount &gt; 5000000 &amp;&amp; Amount &lt;= 10000000, 4, 5)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>TCV Complexity Rating</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>