force-app/main/default/objects/Opportunity/fields/Today_Week__c.field-meta.xml
<CustomField>
    <fullName>Today_Week__c</fullName>
    <formula>MOD(FLOOR( ( TODAY()  -DATEVALUE(&quot;2006-01-01&quot; ))/7),52)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Today Week</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>