force-app/main/default/objects/Opportunity/fields/Total_Schedule_Revenue_to_Date__c.field-meta.xml
<CustomField>
    <fullName>Total_Schedule_Revenue_to_Date__c</fullName>
    <description>The field rolls up the Total Schedule Revenue to Date from the Opportunity Product Classification revenues.</description>
    <inlineHelpText>The sum of the expected revenue to date across all products attached to the opportunity from the revenue start date up to the revenue scheduled for the current month.</inlineHelpText>
    <label>Opportunity Scheduled Revenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>