force-app/main/default/objects/Opportunity/recordTypes/Complex.recordType-meta.xml
<RecordType>
    <fullName>Complex</fullName>
    <active>true</active>
    <businessProcess>BG Sales Process</businessProcess>
    <label>Complex</label>
</RecordType>