force-app/main/default/objects/Opportunity/recordTypes/Major.recordType-meta.xml
<RecordType>
    <fullName>Major</fullName>
    <active>true</active>
    <businessProcess>BG Sales Process</businessProcess>
    <label>Major</label>
</RecordType>