force-app/main/default/objects/Opportunity/recordTypes/Simple.recordType-meta.xml
<RecordType>
    <fullName>Simple</fullName>
    <active>true</active>
    <businessProcess>BG Sales Process</businessProcess>
    <label>Simple</label>
</RecordType>