force-app/main/default/objects/Opportunity/validationRules/AmountRequiredBeforeMovingStage.validationRule-meta.xml
<ValidationRule>
    <fullName>AmountRequiredBeforeMovingStage</fullName>
    <active>true</active>
    <description>Ensure Total Opportunity Value is populated before progressing opportunity from &quot;Identify&quot; to &quot;Qualify&quot; stage and beyond. Total Opportunity Value should always be &gt;= 300 if there are no products added for an opportunity.</description>
    <errorConditionFormula>AND(
 NOT(ISNEW()),
 ISCHANGED( StageName ),
 OR( ISPICKVAL(StageName, &quot;Qualify&quot;), ISPICKVAL(StageName,
 &quot;Propose&quot;), ISPICKVAL(StageName, &quot;Negotiate&quot;),
 ISPICKVAL(StageName, &quot;Closed Won&quot;) ),
 OR(ISBLANK( Amount ), AND(Count_of_Opportunity_Line_Items__c = 0, 
 Amount &lt; 300))
)</errorConditionFormula>
    <errorDisplayField>Amount</errorDisplayField>
    <errorMessage>Add a Total Opportunity Value. Your initial sales estimate (&gt;=$300) must be assigned in the Total Opportunity Value field prior to adding products.</errorMessage>
</ValidationRule>