force-app/main/default/objects/Opportunity/validationRules/APMS_Contract_Start_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>APMS_Contract_Start_Date</fullName>
    <active>true</active>
    <description>For APMS Applications (SecurePay) the contract start date is mandatory prior to changing the Opportunity status to 80% (Negotiate)</description>
    <errorConditionFormula>AND(
  IsAPMSApplication__c = TRUE,
   ISBLANK(Contract_Start_Date__c),
   ISPICKVAL(StageName , &quot;Negotiate&quot;) 
)</errorConditionFormula>
    <errorDisplayField>Contract_Start_Date__c</errorDisplayField>
    <errorMessage>Please enter a contract start date</errorMessage>
</ValidationRule>