force-app/main/default/objects/Opportunity/validationRules/Cannot_change_Subtype_past_Qualify_Stage.validationRule-meta.xml
<ValidationRule>
    <fullName>Cannot_change_Subtype_past_Qualify_Stage</fullName>
    <active>true</active>
    <errorConditionFormula>AND 
(
(
OR (
(ISPICKVAL( StageName, &apos;Closed Won&apos; )),
(ISPICKVAL( StageName, &apos;Closed Lost&apos; )),
(ISPICKVAL( StageName, &apos;Closed Disqualified&apos; )),
(ISPICKVAL( StageName, &apos;Closed Duplicate&apos; ))
)
), 
 ISCHANGED( Opportunity_SubType__c ) 
)</errorConditionFormula>
    <errorMessage>Sub Type cannot be updated for Closed Opportunity</errorMessage>
</ValidationRule>