force-app/main/default/objects/Opportunity/validationRules/Closed_Won_Stage_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Closed_Won_Stage_Validation</fullName>
    <active>false</active>
    <description>STP: Validation rule to restrict Closed-Won opportunity from being updated by the Sales users.</description>
    <errorConditionFormula>IF(
ISPICKVAL(PRIORVALUE(StageName),&quot;Closed Won&quot;)&amp;&amp; $Profile.Name = &quot;BG Base&quot; &amp;&amp; NOT($Permission.BG_Sales_Operations) &amp;&amp; NOT( ISCHANGED( Is_Superseded_Opportunity__c )) , true, false)</errorConditionFormula>
    <errorMessage>Closed-won opportunity record cannot be updated.</errorMessage>
</ValidationRule>