force-app/main/default/objects/Opportunity/validationRules/Fill_Min_Monthly_Spnd_Startrack_Proposal.validationRule-meta.xml
<ValidationRule>
    <fullName>Fill_Min_Monthly_Spnd_Startrack_Proposal</fullName>
    <active>true</active>
    <description>This is to ensure that the user enters minimum monthly spend if it is a startrack proposal.</description>
    <errorConditionFormula>AND(ISPICKVAL(IsStartrackProposal__c , &apos;Yes&apos;) , ISBLANK( APTMinimumMonthlySpend__c ))</errorConditionFormula>
    <errorDisplayField>APTMinimumMonthlySpend__c</errorDisplayField>
    <errorMessage>Complete this field for Startrack Opportunity</errorMessage>
</ValidationRule>