force-app/main/default/objects/Opportunity/validationRules/Hub_No_Change_to_Non_Hub_Opp_Owner.validationRule-meta.xml
<ValidationRule>
    <fullName>Hub_No_Change_to_Non_Hub_Opp_Owner</fullName>
    <active>true</active>
    <description>This rule will prevent Hub users from editing the Opp Owner if the Opportunity isn&apos;t Locally Managed.</description>
    <errorConditionFormula>AND(ISCHANGED(OwnerId), OR($Profile.Name = &apos;Hub Users&apos;, $Profile.Name = &apos;Hub TSR Users&apos;) ,  Locally_Managed__c = FALSE,  PRIORVALUE( OwnerId) &lt;&gt;  $User.Id )</errorConditionFormula>
    <errorMessage>You cannot change the owner of this Opportunity because it hasn&apos;t originated from a Hub.</errorMessage>
</ValidationRule>