force-app/main/default/objects/Opportunity/validationRules/Key_Contact_prior_to_Propose_stage.validationRule-meta.xml
<ValidationRule>
    <fullName>Key_Contact_prior_to_Propose_stage</fullName>
    <active>true</active>
    <description>Key Contact is required on Opportunities prior to them progressing to propose stage</description>
    <errorConditionFormula>AND(
$Permission.BG_Core,
ISCHANGED(StageName), 
(ISPICKVAL(StageName, &quot;Propose&quot;)), 
(ISBLANK(KeyContact__c )))</errorConditionFormula>
    <errorDisplayField>KeyContact__c</errorDisplayField>
    <errorMessage>Opportunity Stage cannot be moved to Propose without the Key Contact field being completed</errorMessage>
</ValidationRule>