force-app/main/default/objects/Opportunity/validationRules/KeyContactRequiredBeforeMovingStage.validationRule-meta.xml
<ValidationRule>
    <fullName>KeyContactRequiredBeforeMovingStage</fullName>
    <active>true</active>
    <description>Ensure Key Contact is populated before progressing opportunity from &quot;Identify&quot; to &quot;Qualify&quot; stage and beyond.</description>
    <errorConditionFormula>AND(
 NOT(ISNEW()),
 ISCHANGED( StageName ),
 ISBLANK( KeyContact__c ),
 OR( ISPICKVAL(StageName, &quot;Qualify&quot;), ISPICKVAL(StageName, &quot;Propose&quot;), ISPICKVAL(StageName, &quot;Negotiate&quot;), ISPICKVAL(StageName, &quot;Closed Won&quot;) )
)</errorConditionFormula>
    <errorDisplayField>KeyContact__c</errorDisplayField>
    <errorMessage>Add a key contact. All opportunities must have the decision maker assigned in the Key Contact field.</errorMessage>
</ValidationRule>