force-app/main/default/objects/Opportunity/validationRules/Major_Oppty_Negotiate_Stage_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Major_Oppty_Negotiate_Stage_Validation</fullName>
    <active>true</active>
    <description>STP: Validation rule prior to stage update Propose.</description>
    <errorConditionFormula>AND(
ISCHANGED(StageName),
ISPICKVAL(StageName, &quot;Negotiate&quot;), 
$RecordType.Name = &quot;Major&quot;,
CTA_Propose_Approved__c  = false,
Opportunity_Annualised_Value__c  &gt;= 3000000
)</errorConditionFormula>
    <errorMessage>Commit To Action - Propose Request approval is required before moving this Opportunity to the Negotiate Stage</errorMessage>
</ValidationRule>