force-app/main/default/objects/Opportunity/validationRules/Operational_Details_Validations.validationRule-meta.xml
<ValidationRule>
    <fullName>Operational_Details_Validations</fullName>
    <active>true</active>
    <description>Billing Account related validation</description>
    <errorConditionFormula>AND(
ISPICKVAL(Type_of_billing_account_required__c ,&quot;Existing Billing Account&quot;),
ISBLANK(Billing_Account__c)
)</errorConditionFormula>
    <errorMessage>If existing billing account is required, an existing billing account must be nominated</errorMessage>
</ValidationRule>