force-app/main/default/objects/Opportunity/validationRules/Opportunity_Closed_Date_Not_In_Past.validationRule-meta.xml
<ValidationRule>
    <fullName>Opportunity_Closed_Date_Not_In_Past</fullName>
    <active>true</active>
    <description>REQ2282230 - A validation rule that forces the seller to update the close date to a date that is not in the past</description>
    <errorConditionFormula>OR ( 
 AND(
  $Profile.Name &lt;&gt; &quot;System Administrator&quot;,
  $Profile.Name &lt;&gt; &quot;Sales Admin&quot;,
  TEXT(StageName)= &quot;Closed Won&quot;,
  ISCHANGED(StageName),
  IsClosed, CloseDate &lt; Today()
),
 AND(
  $Profile.Name &lt;&gt; &quot;System Administrator&quot;,
  $Profile.Name &lt;&gt; &quot;Sales Admin&quot;,
  TEXT(StageName)= &quot;Closed Won&quot;,
  ISCHANGED(CloseDate),
  IsClosed, CloseDate &lt; Today()
 )
)</errorConditionFormula>
    <errorDisplayField>CloseDate</errorDisplayField>
    <errorMessage>Closed date cannot be in the past</errorMessage>
</ValidationRule>