force-app/main/default/objects/Opportunity/validationRules/Phase_2_Won_Requires_Contract_Dates.validationRule-meta.xml
<ValidationRule>
    <fullName>Phase_2_Won_Requires_Contract_Dates</fullName>
    <active>true</active>
    <errorConditionFormula>(Count_of_Contract_Start_Dates__c &gt;0  ||  Count_of_Contract_End_Dates__c &gt; 0) &amp;&amp; IsWon &amp;&amp;  ECLM_IsReview__c = False</errorConditionFormula>
    <errorMessage>Please enter the Revenue Dates on the Opportunity Products.</errorMessage>
</ValidationRule>