force-app/main/default/objects/Opportunity/validationRules/Qualify_Stage_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Qualify_Stage_Validation</fullName>
    <active>true</active>
    <description>STP: Validation rule prior to stage updated to Qualify.</description>
    <errorConditionFormula>AND(
$Permission.BG_Core,
ISCHANGED(StageName),
ISPICKVAL(StageName, &quot;Qualify&quot;),
ISBLANK( Text(Next_Step__c) )
)</errorConditionFormula>
    <errorMessage>Next Step must be completed before changing Opportunity stage to Qualify.</errorMessage>
</ValidationRule>